--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/app.js",
+      "src": "src/app.js",
       "use": "@vercel/node"
     }
   ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "./src/app.js" }
+    { "source": "/(.*)", "destination": "src/app.js" }
   ]
 }
