--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,11 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "src/app.js" }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+    }
   ]
 }
