--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,15 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/",
+      "src": "/api/(.*)",
+      "dest": "/src/app.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/src/app.js"
     }
   ]
 }
