--- a/vercel.json
+++ b/vercel.json
@@ -8,15 +8,15 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/src/app.js",
+      "src": "/(.*)",
+      "dest": "src/app.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     }
   ],
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/src/app.js"
+      "destination": "src/app.js"
     }
   ]
 }
