--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,16 @@
     {
       "src": "src/app.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "prisma/schema.prisma",
+      "use": "@prisma/cli",
+      "config": { "prismaVersion": "2.28" }
     }
   ],
+  "hooks": {
+    "postinstall": "npx prisma generate"
+  },
   "routes": [
     {
       "src": "/(.*)",
