--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
       "config": { "prismaVersion": "2.28" }
     }
   ],
-  "hooks": {
-    "postinstall": "npx prisma generate"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/app.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+    }
+  ]
 }
