--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
-    "parseurl": "^1.3.3"
-  },
-  "devDependencies": {
+    "parseurl": "^1.3.3",
     "prisma": "^5.11.0"
   }
 }
