--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
     },
     {
       "src": "prisma/schema.prisma",
-      "use": "@prisma/cli",
-      "config": { "prismaVersion": "2.28" }
+      "use": "prisma",
+      "config": { "prismaVersion": "5.11.0" }
     }
   ],
   "routes": [
